--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <header>
         <nav class="navbar">
             <div class="brand">
-                <img src="/Assets/logo_text.png" alt="logo de Il Metterello">
+                <img src="Assets/logo_text.png" alt="logo de Il Metterello">
             </div>
             <div class="actions">
-                <img src="/Assets/icons/menu.svg" alt="boton de menu">
+                <img src="Assets/icons/menu.svg" alt="boton de menu">
             </div>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <img src="/Assets/hero_left.png" class="left-floating" alt="Foto de tomate">
-            <img src="/Assets/hero_right.png" class="right-floating" alt="Foto de tomate y queso">
+            <img src="Assets/hero_left.png" class="left-floating" alt="Foto de tomate">
+            <img src="Assets/hero_right.png" class="right-floating" alt="Foto de tomate y queso">
             <div class="plate-wrapper">
-                <img src="/Assets/bar_logo.png" class="logo-bar" alt="Foto de palo de amasar">
-                <img src="/Assets/plate.png" alt="foto de plato con comida">
+                <img src="Assets/bar_logo.png" class="logo-bar" alt="Foto de palo de amasar">
+                <img src="Assets/plate.png" alt="foto de plato con comida">
                 <div class="plate-circle"></div>
             </div>
             <div class="hero-content">
@@ -43,27 +43,27 @@
                 <div class="feature">
                     <h4 class="text-serif feature-title">Esencia Artesanal</h4>
                     <p>Descubre nuestra experiencia gastronómica italiana artesanal. Sabores auténticos y pasión en cada plato, en un ambiente acogedor.</p>
-                    <img src="/Assets/image1.jpg" alt="">
+                    <img src="Assets/image1.jpg" alt="">
                 </div>
                 <div class="feature">
                     <h4 class="text-serif feature-title">Sabor Tradicional</h4>
                     <p>Sabores tradicionales que cuentan historias, ingredientes cuidadosamente seleccionados. Sumérgete en la auténtica cocina italiana artesanal que deleita tus sentidos.</p>
-                    <img src="/Assets/image2.jpg" alt="">
+                    <img src="Assets/image2.jpg" alt="">
                 </div>
                 <div class="feature">
                     <h4 class="text-serif feature-title">Ingredientes Frescos</h4>
                     <p>Disfruta de la frescura y calidad de ingredientes en cada creación culinaria de nuestro restaurante</p>
-                    <img src="/Assets/image3.jpg" alt="">
+                    <img src="Assets/image3.jpg" alt="">
                 </div>
             </div>
         </section>
     </main>
     
     <footer class="footer">
-        <img src="/Assets/cheese_footer.png" class="footer-floating" >
+        <img src="Assets/cheese_footer.png" class="footer-floating" >
         <div class="footer-circle"></div>
         <div class="logo-footer">
-            <img src="/Assets/logo_footer.png">
+            <img src="Assets/logo_footer.png">
         </div>
         <div class="links">
             <ul type="none">
